--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ outputs:
     description: 'output file'
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'docker://connormckelvey/html2pdf:v0.0.3'
   args:
     - -html 
     - ${{ inputs.html }}
